@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_failure_output" errors="1" failures="20" tests="21" time="0.12117" hostname="unknown" timestamp="2015-01-07T21:36:09">
+<testsuite name="test_failure_output" errors="1" failures="21" tests="22" time="0.1314" hostname="unknown" timestamp="2015-01-08T13:51:54">
   <properties/>
   <testcase classname="test_failure_output" name="test_empty">
     <failure>
@@ -73,26 +73,44 @@ In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_ou
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_struct">
     <failure>
-Data not equal:
-  Expected : [{foo:{'hi', 'ho'}; bar:[3 4]}]
-  Actual   : [{foo:{'ho', 'hi'}; bar:[3 4]}]
+Data not equal at position .foo:
+  Expected : {'hi', 'ho'}
+  Actual   : {'ho', 'hi'}
 In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 71.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct">
     <failure>
-Data not equal:
-  Expected : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'hi', 'ho'}; bar:[3 4]}]}]
-  Actual   : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'ho', 'hi'}; bar:[3 4]}]}]
+Data not equal at position .tee.foo:
+  Expected : {'hi', 'ho'}
+  Actual   : {'ho', 'hi'}
 In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 80.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_nested_struct_multiple_differences">
     <failure>
-Data not equal:
-  Expected : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'hi', 'ho'}; bar:[3 4]}]}]
-  Actual   : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'ho', 'hi'}; bar:[3 5]}]}]
+Data not equal at position .tee.bar:
+  Expected : [3 4]
+  Actual   : [3 5]
+Data not equal at position .tee.foo:
+  Expected : {'hi', 'ho'}
+  Actual   : {'ho', 'hi'}
 In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 90.
+    </failure>
+  </testcase>
+  <testcase classname="test_failure_output" name="test_equals_nested_struct_many_differences">
+    <failure>
+Data not equal at position .bar:
+  Expected : [3 4]
+  Actual   : [3 5]
+Data not equal at position .foo:
+  Expected : {'hi', 'ho'}
+  Actual   : 42
+Data not equal at position .tee.bar:
+  Expected : [3 4]
+  Actual   : [3 5]
+... more differences detected, but not displayed.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 102.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_equals_structarray">
@@ -100,43 +118,43 @@ In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_ou
 Data not equal:
   Expected : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'hi', 'ho'}; bar:4}]
   Actual   : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'ho', 'hi'}; bar:4}]
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 98.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 110.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_not_equals">
     <failure>
 Expected and actual are equal.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 103.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 115.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_error">
     <failure>
 Error expected, but none occurred.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 108.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 120.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_typed_error">
     <failure>
 Error expected, but none occurred.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 113.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 125.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_wrong_typed_error">
     <failure>
 Error occurred, but did not match criteria. Expected error identifier 'MATLAB:SomeError' actually was 'MATLAB:m_improper_grouping'.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 117.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 129.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_warning">
     <failure>
 No warning MATLAB:rmpath:DirNotFound when executing function @()3.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 123.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135.
     </failure>
   </testcase>
   <testcase classname="test_failure_output" name="test_implementation_fault">
     <error>
 Undefined function or variable 'unknown_function_call'.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 127
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 139
 In C:\Users\Alexander\repositories\mlunit\src\@function_test_case\run_test.m at line 21
 In C:\Users\Alexander\repositories\mlunit\src\@test_case\run.m at line 42
 In C:\Users\Alexander\repositories\mlunit\src\@test_suite\run.m at line 24
@@ -147,8 +165,8 @@ In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at
   <testcase classname="test_failure_output" name="test_nested_functions">
     <failure>
 Nested function test.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135.
-In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 131.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 147.
+In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 143.
     </failure>
   </testcase>
   <system-out/>
