@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.0026722" hostname="unknown" timestamp="2015-01-07T21:36:09">
+<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.0040881" hostname="unknown" timestamp="2015-01-08T13:51:54">
   <properties/>
   <testcase classname="test_success_output" name="test_success"/>
   <system-out/>
