@@ -1,7 +1,7 @@
 
 ----------------------------------------------------------------------
 mlUnit 1.6.7-SNAPSHOT
-Started: 2015-01-07 21:36:09.
+Started: 2015-01-08 13:51:53.
 Test directory: C:\Users\Alexander\repositories\mlunit\sample\failure_samples
 ----------------------------------------------------------------------
 
@@ -60,43 +60,58 @@ Running suite test_failure_output <<< FAILED
       Actual   : {3, 'fOo'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 63.
   test_equals_struct fail:
-    Data not equal:
-      Expected : [{foo:{'hi', 'ho'}; bar:[3 4]}]
-      Actual   : [{foo:{'ho', 'hi'}; bar:[3 4]}]
+    Data not equal at position .foo:
+      Expected : {'hi', 'ho'}
+      Actual   : {'ho', 'hi'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 71.
   test_equals_nested_struct fail:
-    Data not equal:
-      Expected : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'hi', 'ho'}; bar:[3 4]}]}]
-      Actual   : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'ho', 'hi'}; bar:[3 4]}]}]
+    Data not equal at position .tee.foo:
+      Expected : {'hi', 'ho'}
+      Actual   : {'ho', 'hi'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 80.
   test_equals_nested_struct_multiple_differences fail:
-    Data not equal:
-      Expected : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'hi', 'ho'}; bar:[3 4]}]}]
-      Actual   : [{foo:{'hi', 'ho'}; bar:[3 4]; tee:[{foo:{'ho', 'hi'}; bar:[3 5]}]}]
+    Data not equal at position .tee.bar:
+      Expected : [3 4]
+      Actual   : [3 5]
+    Data not equal at position .tee.foo:
+      Expected : {'hi', 'ho'}
+      Actual   : {'ho', 'hi'}
     In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 90.
+  test_equals_nested_struct_many_differences fail:
+    Data not equal at position .bar:
+      Expected : [3 4]
+      Actual   : [3 5]
+    Data not equal at position .foo:
+      Expected : {'hi', 'ho'}
+      Actual   : 42
+    Data not equal at position .tee.bar:
+      Expected : [3 4]
+      Actual   : [3 5]
+    ... more differences detected, but not displayed.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 102.
   test_equals_structarray fail:
     Data not equal:
       Expected : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'hi', 'ho'}; bar:4}]
       Actual   : [{foo:{'hi', 'ho'}; bar:3}, {foo:{'ho', 'hi'}; bar:4}]
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 98.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 110.
   test_not_equals fail:
     Expected and actual are equal.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 103.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 115.
   test_error fail:
     Error expected, but none occurred.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 108.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 120.
   test_typed_error fail:
     Error expected, but none occurred.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 113.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 125.
   test_wrong_typed_error fail:
     Error occurred, but did not match criteria. Expected error identifier 'MATLAB:SomeError' actually was 'MATLAB:m_improper_grouping'.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 117.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 129.
   test_warning fail:
     No warning MATLAB:rmpath:DirNotFound when executing function @()3.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 123.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135.
   test_implementation_fault error:
     Undefined function or variable 'unknown_function_call'.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 127
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 139
     In C:\Users\Alexander\repositories\mlunit\src\@function_test_case\run_test.m at line 21
     In C:\Users\Alexander\repositories\mlunit\src\@test_case\run.m at line 42
     In C:\Users\Alexander\repositories\mlunit\src\@test_suite\run.m at line 24
@@ -104,15 +119,15 @@ Running suite test_failure_output <<< FAILED
     In C:\Users\Alexander\repositories\mlunit\src\automation\recursive_test_run.m at line 41
   test_nested_functions fail:
     Nested function test.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 135.
-    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 131.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 147.
+    In C:\Users\Alexander\repositories\mlunit\sample\failure_samples\test_failure_output.m at line 143.
 
 Running suite test_success_output
 
 ----------------------------------------------------------------------
-Executed 23 tests in 0.20s
+Executed 24 tests in 0.21s
 
-21 tests FAILED
+22 tests FAILED
 2 tests had ERRORS
 ======================================================================
 
