@@ -29,28 +29,26 @@ if ~islogical(pass_if_equal), error('pass_if_equal must be a logical'); end
 
 equal_nans = mlunit_param('equal_nans');
 
-% default values for msg and eps
+% default values for eps and message parts
 absolute_eps = 0;
-
-% default message
-if pass_if_equal
-   msg = sprintf('Data not equal:\n  %-9s: %s\n  %-9s: %s', 'Expected', printable(expected), 'Actual', printable(actual));
-else
-   msg = 'Expected and actual are equal.';
-end
+tolerance_msg = '';
+custom_msg = '';
 
 % Fourth argument can either be absolute_eps or msg. Handle input args carefully.
 if nargin >= 4 && isnumeric(absolute_eps_or_msg)
    absolute_eps = absolute_eps_or_msg;
-   msg = [msg sprintf(' Tolerance was %s.', printable(absolute_eps))];
+   % Leading dot is sentence closer for preceding message text. Closing marks
+   % will be provided by message construction later on
+   tolerance_msg = sprintf('. Tolerance is %s', printable(absolute_eps));
+   
    % if fourth argument is eps, then the fifth may be the msg and all others the
    % msg sprintf arguments
    if nargin >= 5
-      msg = sprintf(varargin{1}, varargin{2:end});
+      custom_msg = sprintf(varargin{1}, varargin{2:end});
    end
    
 elseif nargin >= 4 && ischar(absolute_eps_or_msg)
-   msg = sprintf(absolute_eps_or_msg, varargin{:});
+   custom_msg = sprintf(absolute_eps_or_msg, varargin{:});
 end
 
 % only check against eps if expected and actual both are numeric and have the
@@ -69,7 +67,7 @@ if are_compatible_numerics && sizes_differ
 elseif are_compatible_numerics
    
    % compare all values by default
-   indices = logical(ones(size(expected)));
+   indices = true(size(expected));
    if equal_nans
       % select only indices for comparison where not both expected and actual
       % are NaN
@@ -95,9 +93,61 @@ else
    equals = isequal(actual, expected);
 end
 
+% construct message
+if ~isempty(custom_msg)
+   msg = custom_msg;
+elseif pass_if_equal
+   % In case of failed equality check, prepare special message for large scalar structs
+   isscalarstruct = @(s) isstruct(s) && isscalar(s);
+   if ~equals && isscalarstruct(expected) && isscalarstruct(actual)
+      struct_diffs = find_struct_differences(expected, actual);
+      msg = loc_prepare_message_from_diffs(struct_diffs, tolerance_msg);
+   else
+      msg = sprintf('Data not equal%s:\n  %-9s: %s\n  %-9s: %s', tolerance_msg, 'Expected', printable(expected), 'Actual', printable(actual));
+   end
+else
+   msg = ['Expected and actual are equal' tolerance_msg '.'];
+end
+
 % fail if pass on equal requested, but is not equal
 % fail if fail on equal requested, and is equal
 % else, pass quietly
 if xor(pass_if_equal, equals)
    fail(msg);
 end
+
+
+function msg = loc_prepare_message_from_diffs(struct_diffs, tolerance_msg)
+
+    assert(nargin == 2);
+    
+    first_n_items = 3;
+
+    msgs = cell(size(struct_diffs));
+    for sd = 1:numel(struct_diffs)
+        
+        % truncate output after first n differences
+        if sd > first_n_items
+            msgs{sd} = '... more differences detected, but not displayed.';
+            break;
+        
+        % message for differing field values on both sides
+        elseif isempty(struct_diffs(sd).missingin)
+            msgs{sd} = sprintf('Data not equal at position %s%s:\n  %-9s: %s\n  %-9s: %s', ...
+                struct_diffs(sd).fieldpath, ...
+                tolerance_msg, ...
+                'Expected', printable(struct_diffs(sd).expected), ...
+                'Actual', printable(struct_diffs(sd).actual));
+        
+        % message for field missing on one side
+        else
+            msgs{sd} = sprintf('Field %s missing in %s.', ...
+                struct_diffs(sd).fieldpath, ...
+                struct_diffs(sd).missingin);
+        end
+    end
+    
+    % prevent preallocated empty items from being joined into the message string
+    msgs(sd+1:end) = [];
+    
+    msg = strjoin(msgs, sprintf('\n'));
